--- a/swagger/paths/auth/refresh.yaml
+++ b/swagger/paths/auth/refresh.yaml
@@ -34,6 +34,6 @@ responses:
                   type: string
                   example: msCUebr6BGhZcOO0qNLU6JbWd0AdmBKYadwnknjq
   '401':
-    $ref: ../../components/responses/401.yaml
+    $ref: '../../components/responses/401.yaml'
   '500':
-    $ref: ../../components/responses/500.yaml
+    $ref: '../../components/responses/500.yaml'
