--- a/swagger/components/schemas/recipe.yaml
+++ b/swagger/components/schemas/recipe.yaml
@@ -42,8 +42,7 @@
       type: string
       example: "90"
     cals:
-      type: integer
-      nullable: true
+      type: [ "integer", "null" ]
       minimum: 1
       maximum: 10000
       example: 320
@@ -61,8 +60,7 @@
             type: string
             example: "4 cups"
     isFavorite:
-      type: boolean
-      nullable: true
+      type: [ "boolean", "null" ]
       example: true
     createdAt:
       type: string
