--- a/swagger/paths/auth/register.yaml
+++ b/swagger/paths/auth/register.yaml
@@ -56,13 +56,13 @@ responses:
                 - accessToken
               properties:
                 user:
-                  $ref: ../../components/schemas/user.yaml
+                  $ref: '../../components/schemas/user.yaml'
                 accessToken:
                   type: string
                   example: msCUebr6BGhZcOO0qNLU6JbWd0AdmBKYadwnknjq
   '400':
-    $ref: ../../components/responses/400.yaml
+    $ref: '../../components/responses/400.yaml'
   '409':
-    $ref: ../../components/responses/409.yaml
+    $ref: '../../components/responses/409.yaml'
   '500':
-    $ref: ../../components/responses/500.yaml
+    $ref: '../../components/responses/500.yaml'
